--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  
 <body>
-  <h1>TEST</h1>
+  <h1 margin:center > S E X </h1>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
