--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
  
 <body>
   <h1> S E X </h1>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://i.giphy.com/media/K6bKs7mUXuQrAQbKhG/giphy.webp" />
 </body>
 </html>
