--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  
 <body>
-  <h1> S E X </h1>
-  <img src="https://i.giphy.com/media/K6bKs7mUXuQrAQbKhG/giphy.webp" />
+  <h1 style="margin:auto;width:auto;height:auto;position:flex;" > S E X </h1>
+  <img style="width:100%;height:0;padding-bottom:71%;position:relative;" src="https://media.giphy.com/media/lZzhBZW7kvzWYtydVA/giphy.gif" />
 </body>
 </html>
