--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
  
 <body>
   <h1 style="margin:auto;width:auto;height:auto;position:flex;" > S E X </h1>
-  <img style="width:100%;height:0;padding-bottom:71%;position:relative;" src="https://media.giphy.com/media/lZzhBZW7kvzWYtydVA/giphy.gif" />
+  <img style="margin:auto;width:auto;height:auto;position:flex;" src="https://media.giphy.com/media/lZzhBZW7kvzWYtydVA/giphy.gif" />
 </body>
 </html>
